--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,5 +60,5 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
-    implementation 'androidx.navigation:navigation-common:2.5.2'
+    implementation "androidx.navigation:navigation-compose:$nav_version"
 }
