--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ buildscript {
     ext {
         compose_ui_version = '1.1.1'
         nav_version = "2.5.2"
+        retrofit_version = '2.9.0'
+        moshi_version = '1.9.3'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
