--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
         nav_version = "2.5.2"
         retrofit_version = '2.9.0'
         moshi_version = '1.9.3'
+        landscapist_version = '1.4.1'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
