--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         retrofit_version = '2.9.0'
         moshi_version = '1.9.3'
         landscapist_version = '1.4.1'
+        intercepter_version = '4.7.2'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
